2007-03-18 Chris Morley

	* src/formats/mdlformat.cpp:Added support for atom aliases when
	reading. It's not much described in the main MDL specification,
	so this implementation is just adequate to handle the InChI
	samples, where for some reason, this antiquated feature is
	used in several molecules.
	
	* src/formats/inchiformat.cpp(ReadMolecule): Now reads implicit
	H isotopes.
	(WriteMolecule): rewrote option to not display routine warnings.
	
	* test/: Added inchiwrite.cpp, two NIST sample molecule sets and
	annotated results sets.
	
	* src/formats/getinchi.cpp: Added declaration of GetInChI().
	
	* src/canon.cpp (FixCisTransBonds): changed | to || in if statement
	
	* src/forcefield (GenerateCoordinates): initialize torang to 0,
	to avoid compiler warning. This variable doesn't seem to be
	doing much but please could somebody check this is ok.
	
2007-03-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/mol.cpp (Separate): Add support for copying, updating
	OBChiralData. Fixes PR#1680730.

	* src/obutil.cpp: Fix typo in yesterday's change.

	* test/logp_psa.cpp: Update to output predicted values, even if
	they match.

	* src/obconversion.cpp: Make sure to declare the new readbuf
	outside of the if() scope.

2007-03-17  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/molchrg.cpp: Add new OBPairData descriptor "PartialCharges"
	to express origin as Gasteiger charges.

	* src/formats/qchemformat.cpp, src/formats/mopacformat.cpp, 
	src/formats/gamessformat.cpp, src/formats/gaussformat.cpp: 
	Set PartialCharges descriptor to express origin as Mulliken
	charges.

	* src/formats/mol2format.cpp: Use above.

	* src/*: Strip out 0.0f and similar floating-point casts,
	extending yesterday's changes with forcefield.cpp. Defensive
	programming against similar floating-point issues.

2007-03-16  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/atom.h, include/openbabel/mol.h: Fix